--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
     text-align: center;
     color: #fff;
     /* background-image: url("assets/pre-education.jpg"); */
-    background:linear-gradient(to bottom, rgb(0 0 0 / 44%) 0%, rgb(0 0 0 / 18%) 100%), url("assets/pre-education.jpg");
+    background:linear-gradient(to bottom, rgb(0 0 0 / 44%) 0%, rgb(0 0 0 / 18%) 100%), url("assets/pre-education-2.jpg");
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: center center;
