--- a/style.css
+++ b/style.css
@@ -48,8 +48,7 @@ body {
     padding-bottom: 4.5rem;
     text-align: center;
     color: #fff;
-    /* background-image: url("assets/pre-education.jpg"); */
-    background:linear-gradient(to bottom, rgb(0 0 0 / 44%) 0%, rgb(0 0 0 / 18%) 100%), url("assets/pre-education-2.jpg");
+    background:linear-gradient(to bottom, rgb(0 0 0 / 44%) 0%, rgb(0 0 0 / 18%) 100%), url("assets/playroom-m.jpg");
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: center center;
@@ -68,11 +67,26 @@ body {
     margin-bottom: 2rem;
     font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   }
+
+
+   /* X-Small devices (portrait phones, less than 576px)
+   No media query for `xs` since this is the default in Bootstrap */
   
-  @media (min-width: 768px) {
+   /* Small devices (landscape phones, 576px and up) */
+  @media (min-width: 576px) { 
     .masthead {
       padding-top: 17rem;
       padding-bottom: 12.5rem;
+      background:linear-gradient(to bottom, rgb(0 0 0 / 44%) 0%, rgb(0 0 0 / 18%) 100%), url("assets/playroom-m.jpg");
+    }
+   }
+  
+   /* Medium devices (tablets, 768px and up) */
+  @media (min-width: 768px) { 
+    .masthead {
+      padding-top: 6.5rem;
+      padding-bottom: 4.5rem;
+      background:linear-gradient(to bottom, rgb(0 0 0 / 44%) 0%, rgb(0 0 0 / 18%) 100%), url("assets/playroom-l.jpg");
     }
     .masthead .masthead-subheading {
       font-size: 2.25rem;
@@ -86,4 +100,26 @@ body {
       line-height: 4.5rem;
       margin-bottom: 4rem;
     }
-  }
+   }
+  
+   /* Large devices (desktops, 992px and up) */
+  @media (min-width: 992px) { }
+  
+   /* X-Large devices (large desktops, 1200px and up) */
+  @media (min-width: 1200px) { 
+    .masthead {
+      padding-top: 6.5rem;
+      padding-bottom: 4.5rem;
+      background:linear-gradient(to bottom, rgb(0 0 0 / 44%) 0%, rgb(0 0 0 / 18%) 100%), url("assets/playroom-l.jpg");
+    }
+   }
+  
+   /* XX-Large devices (larger desktops, 1400px and up) */
+  @media (min-width: 1400px) { 
+    .masthead {
+      padding-top: 6.5rem;
+      padding-bottom: 4.5rem;
+      background:linear-gradient(to bottom, rgb(0 0 0 / 44%) 0%, rgb(0 0 0 / 18%) 100%), url("assets/playroom-l.jpg");
+    }
+   }
+  
