--- a/style.css
+++ b/style.css
@@ -87,6 +87,10 @@ body {
       padding-top: 6.5rem;
       padding-bottom: 4.5rem;
       background:linear-gradient(to bottom, rgb(0 0 0 / 44%) 0%, rgb(0 0 0 / 18%) 100%), url("assets/playroom-l.jpg");
+      background-repeat: no-repeat;
+      background-attachment: scroll;
+      background-position: center center;
+      background-size: cover;
     }
     .masthead .masthead-subheading {
       font-size: 2.25rem;
@@ -97,7 +101,7 @@ body {
     .masthead .masthead-heading {
       font-size: 4.5rem;
       font-weight: 700;
-      line-height: 4.5rem;
+      line-height: 6.5rem;
       margin-bottom: 4rem;
     }
    }
@@ -120,6 +124,10 @@ body {
       padding-top: 6.5rem;
       padding-bottom: 4.5rem;
       background:linear-gradient(to bottom, rgb(0 0 0 / 44%) 0%, rgb(0 0 0 / 18%) 100%), url("assets/playroom-l.jpg");
+      background-repeat: no-repeat;
+      background-attachment: scroll;
+      background-position: center center;
+      background-size: cover;
     }
    }
   
