--- a/style.css
+++ b/style.css
@@ -24,6 +24,27 @@ body {
         background: #0196a9;
         border: #0196a9;
     }
+
+    .title-text {
+      font-size: 2.5rem;
+      font-weight: 700;
+      color: #5a5a5a;
+  }
+  .main-title{
+    font-size: 22px;
+    font-weight: 700;
+    color: #24292d;
+    line-height: 1.25;
+  }
+  .main-para{
+    font-size: 18px;
+    color: #76777b;
+  }
+  .main-para{
+    font-size: 15px;
+    color: #76777b;
+  }
+
   .review-info ul li.stars {
       color: #FFA500;
       position: relative;
@@ -90,6 +111,7 @@ body {
       padding-bottom: 12.5rem;
       background:linear-gradient(to bottom, rgb(0 0 0 / 44%) 0%, rgb(0 0 0 / 18%) 100%), url("assets/playroom-m.jpg");
     }
+
    }
   
    /* Medium devices (tablets, 768px and up) */
@@ -114,7 +136,7 @@ body {
       font-weight: 700;
       line-height: 6.5rem;
       margin-bottom: 4rem;
-    }
+    }    
    }
   
    /* Large devices (desktops, 992px and up) */
@@ -142,3 +164,28 @@ body {
     }
    }
   
+
+
+/*  `sm` applies to x-small devices (portrait phones, less than 576px) */
+@media (max-width: 575.98px) { 
+  .title-text {font-size: 1.5rem;}
+
+  .main-title{
+    font-size: 16px;
+  }
+  .main-para{
+    font-size: 15px;
+  }
+}
+
+ /* `md` applies to small devices (landscape phones, less than 768px) */
+@media (max-width: 767.98px) { }
+
+ /* `lg` applies to medium devices (tablets, less than 992px) */
+@media (max-width: 991.98px) {  }
+
+ /* `xl` applies to large devices (desktops, less than 1200px) */
+@media (max-width: 1199.98px) { }
+
+ /* `xxl` applies to x-large devices (large desktops, less than 1400px) */
+@media (max-width: 1399.98px) { }
