--- a/style.css
+++ b/style.css
@@ -97,6 +97,14 @@ body {
     font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   }
 
+  .masthead.hero-img{
+    background:linear-gradient(to bottom, rgb(0 0 0 / 44%) 0%, rgb(0 0 0 / 18%) 100%), url("assets/franchise-banner-2.jpeg");
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-position: center center;
+    background-size: cover;
+  }
+
   .tns-item {
     width: calc(5%);
 }
