--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ body {
     left: 0;
     width: 51%;
     overflow: hidden;
+    top: 2px;
   }
   .masthead {
     padding-top: 6.5rem;
@@ -112,7 +113,7 @@ body {
   margin-bottom: 14px;
 }
 .join-us {
-  font-size: 2em;
+  font-size:2.4em;
   font-weight: 700;
   color: #717171;
   margin-top: 10px;
