--- a/style.css
+++ b/style.css
@@ -108,16 +108,20 @@ body {
 
   .tns-item {
     width: calc(5%);
-}
-.tns-item .container {
-  margin-bottom: 14px;
-}
-.join-us {
-  font-size:2.4em;
-  font-weight: 700;
-  color: #717171;
-  margin-top: 10px;
-  margin-bottom: 0;
+  }
+  .tns-item .container {
+    margin-bottom: 14px;
+  }
+  .join-us {
+    font-size:2.4em;
+    font-weight: 700;
+    color: #717171;
+    margin-top: 10px;
+    margin-bottom: 0;
+  }
+
+  .accordion-item:nth-child(even) .accordion-header .accordion-button {
+    background: #efefef;
 }
 
    /* X-Small devices (portrait phones, less than 576px)
