--- a/style.css
+++ b/style.css
@@ -74,11 +74,11 @@ body {
     top: 2px;
   }
   .masthead {
-    padding-top: 6.5rem;
-    padding-bottom: 4.5rem;
+    padding-top: 3.5rem;
+    padding-bottom: 17.5rem;
     text-align: center;
-    color: #fff;
-    background:linear-gradient(to bottom, rgb(0 0 0 / 44%) 0%, rgb(0 0 0 / 18%) 100%), url("assets/playroom-m.jpg");
+    color: #56509f;
+    background:linear-gradient(to bottom, rgb(0 0 0 / 0%) 0%, rgb(0 0 0 / 0%) 100%), url("assets/main-img-m.jpg");
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: center center;
@@ -99,7 +99,7 @@ body {
   }
 
   .masthead.hero-img{
-    background:linear-gradient(to bottom, rgb(0 0 0 / 44%) 0%, rgb(0 0 0 / 18%) 100%), url("assets/franchise-banner-2.jpeg");
+    background:linear-gradient(to bottom, rgb(0 0 0 / 0%) 0%, rgb(0 0 0 / 0%) 100%), url("assets/main-img-min.jpg");
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: center center;
@@ -132,7 +132,7 @@ body {
     .masthead {
       padding-top: 17rem;
       padding-bottom: 12.5rem;
-      background:linear-gradient(to bottom, rgb(0 0 0 / 44%) 0%, rgb(0 0 0 / 18%) 100%), url("assets/playroom-m.jpg");
+      background:linear-gradient(to bottom, rgb(0 0 0 / 44%) 0%, rgb(0 0 0 / 18%) 100%), url("assets/main-img-m.jpg");
     }
 
    }
@@ -142,7 +142,7 @@ body {
     .masthead {
       padding-top: 6.5rem;
       padding-bottom: 4.5rem;
-      background:linear-gradient(to bottom, rgb(0 0 0 / 44%) 0%, rgb(0 0 0 / 18%) 100%), url("assets/playroom-l.jpg");
+      background:linear-gradient(to bottom, rgb(0 0 0 / 44%) 0%, rgb(0 0 0 / 18%) 100%), url("assets/main-img-d.jpg");
       background-repeat: no-repeat;
       background-attachment: scroll;
       background-position: center center;
@@ -158,7 +158,7 @@ body {
       font-size: 4.5rem;
       font-weight: 700;
       line-height: 6.5rem;
-      margin-bottom: 4rem;
+      margin-bottom: 2rem;
     }    
    }
   
@@ -170,7 +170,7 @@ body {
     .masthead {
       padding-top: 6.5rem;
       padding-bottom: 4.5rem;
-      background:linear-gradient(to bottom, rgb(0 0 0 / 44%) 0%, rgb(0 0 0 / 18%) 100%), url("assets/playroom-l.jpg");
+      background:linear-gradient(to bottom, rgb(0 0 0 / 44%) 0%, rgb(0 0 0 / 18%) 100%), url("assets/main-img-d.jpg");
     }
    }
   
@@ -178,8 +178,15 @@ body {
   @media (min-width: 1400px) { 
     .masthead {
       padding-top: 6.5rem;
-      padding-bottom: 4.5rem;
-      background:linear-gradient(to bottom, rgb(0 0 0 / 44%) 0%, rgb(0 0 0 / 18%) 100%), url("assets/playroom-l.jpg");
+      padding-bottom: 15.5rem;
+      background:linear-gradient(to bottom, rgb(0 0 0 / 0%) 0%, rgb(0 0 0 / 0%) 100%), url("assets/main-img-d.jpg");
+      background-repeat: no-repeat;
+      background-attachment: scroll;
+      background-position: center center;
+      background-size: cover;
+    }
+    .masthead.hero-img{
+      background:linear-gradient(to bottom, rgb(0 0 0 / 0%) 0%, rgb(0 0 0 / 0%) 100%), url("assets/main-img-d.jpg");
       background-repeat: no-repeat;
       background-attachment: scroll;
       background-position: center center;
