--- a/style.css
+++ b/style.css
@@ -7,7 +7,40 @@ body {
     padding-bottom: 3rem;
     color: rgb(var(--bs-tertiary-color-rgb));
   }
-  
+
+.navbar-brand {
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 39px;
+    color: #4c4c4c;
+    display: flex;
+    gap: 12px;
+    font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+.hero-block {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 6rem;
+}
+.hero-form {
+    backdrop-filter: blur(16px) saturate(180%);
+    -webkit-backdrop-filter: blur(16px) saturate(180%);
+    background-color: rgb(17 25 40 / 33%);
+    border-radius: 12px;
+    border: 1px solid rgba(255, 255, 255, 0.125);
+    padding: 30px;
+    border-radius: 10px;
+}
+.hero-form .form-title {
+  font-size: 2rem;
+  font-weight: 700;
+  color: #fff;
+}
+.hero-form p {
+  font-size: 18px;
+}
   .btn-primary {
       background-color: #fc6500;
       border-color: #fc6500;
@@ -77,7 +110,6 @@ body {
     padding-top: 3.5rem;
     padding-bottom: 17.5rem;
     text-align: center;
-    color: #fff;
     background:linear-gradient(to bottom, rgb(0 0 0 / 60%) 0%, rgb(0 0 0 / 0%) 100%), url("assets/top-bg-m.jpeg");
     background-repeat: no-repeat;
     background-attachment: scroll;
@@ -88,15 +120,21 @@ body {
     font-size: 1.5rem;
     line-height: 1.5rem;
     margin-bottom: 25px;
+    color: #fff;
     font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   }
   .masthead .masthead-heading {
     font-size: 2rem;
     font-weight: 700;
+    color: #fff;
     line-height: 2.5rem;
     margin-bottom: 2rem;
     font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   }
+  .masthead p {
+    font-size: 24px;
+    color: #fff;
+}
 
   .masthead.hero-img{
     background:linear-gradient(to bottom, rgb(0 0 0 / 70%) 0%, rgb(0 0 0 / 0%) 100%), url("assets/top-bg-m.jpeg");
@@ -167,10 +205,6 @@ body {
       background-position: center center;
       background-size: cover;
     }  
-    .masthead.hero-img .container {
-      margin-bottom: 7rem;
-  }
-
    }
   
    /* Large devices (desktops, 992px and up) */
