--- a/style.css
+++ b/style.css
@@ -48,6 +48,20 @@ body {
 .hero-form p {
   font-size: 18px;
 }
+
+.hero-bg{position: relative; height: 100vh;}
+
+.hero-bg picture img {
+  width: 100%;
+  height: 100%;
+}
+.hero-block {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
   .btn-primary {
       background-color: #fc6500;
       border-color: #fc6500;
@@ -205,6 +219,17 @@ body {
   width: 100%;
   height: 534px;
 }
+.sticky-bottom {
+  display: none; /* Hidden by default */
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  z-index: 100;
+}
+
+.sticky-bottom.show {
+  display: block; /* Visible when scrolled down */
+}
 
    /* X-Small devices (portrait phones, less than 576px)
    No media query for `xs` since this is the default in Bootstrap */
@@ -306,15 +331,19 @@ body {
   .masthead .masthead-heading { font-size: 1.6rem;}
   .masthead p {font-size: 20px;}
   .highscope-title h3 {font-size: 1.4rem;}
-  .youtube-iframe-wrapper iframe { height: 198px;
-}
+  .youtube-iframe-wrapper iframe { height: 198px;}
+  .hero-bg {height: auto;}
+  .hero-block {position: unset;transform: none;}
 }
 
  /* `md` applies to small devices (landscape phones, less than 768px) */
 @media (max-width: 767.98px) { }
 
  /* `lg` applies to medium devices (tablets, less than 992px) */
-@media (max-width: 991.98px) {  }
+@media (max-width: 991.98px) { 
+  .hero-bg {height: auto;background: #35ace1;}
+  .hero-block {position: unset;transform: none;padding: 2rem 0;gap: 2rem;}
+ }
 
  /* `xl` applies to large devices (desktops, less than 1200px) */
 @media (max-width: 1199.98px) { }
