--- a/style.css
+++ b/style.css
@@ -30,6 +30,18 @@ body {
     flex-direction: column;
     justify-content: space-between;
     gap: 6rem;
+    width: 70%;
+}
+.overlay-bg {
+  background: linear-gradient(to bottom, rgb(0 0 0 / 70%) 0%, rgb(0 0 0 / 0%) 100%);
+  height: 100vh;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.hero-title p {
+  font-size: 1.5rem;
 }
 .hero-form {
     backdrop-filter: blur(16px) saturate(180%);
@@ -327,13 +339,14 @@ body {
   .masthead {padding-bottom: 3.5rem;}
   .navbar-brand {font-size: 19px;}
   .navbar-brand img { width: 150px;}
-  .hero-block {gap: 1rem;}
+  .hero-bg picture img {object-fit: cover;}
+  .overlay-bg { height: 85vh;background: linear-gradient(to bottom, rgb(0 0 0 / 46%) 0%, rgb(0 0 0 / 0%) 100%);}
+  .hero-block {gap: 2rem;width: 90%;}
+  .hero-title p {font-size: 1rem;}
   .masthead .masthead-heading { font-size: 1.6rem;}
   .masthead p {font-size: 20px;}
   .highscope-title h3 {font-size: 1.4rem;}
   .youtube-iframe-wrapper iframe { height: 198px;}
-  .hero-bg {height: auto;}
-  .hero-block {position: unset;transform: none;}
 }
 
  /* `md` applies to small devices (landscape phones, less than 768px) */
@@ -341,8 +354,7 @@ body {
 
  /* `lg` applies to medium devices (tablets, less than 992px) */
 @media (max-width: 991.98px) { 
-  .hero-bg {height: auto;background: #35ace1;}
-  .hero-block {position: unset;transform: none;padding: 2rem 0;gap: 2rem;}
+  .hero-bg { height: 85vh;background: #35ace1;}
  }
 
  /* `xl` applies to large devices (desktops, less than 1200px) */
