--- a/style.css
+++ b/style.css
@@ -44,9 +44,9 @@ body {
   font-size: 1.5rem;
 }
 .hero-form {
-    backdrop-filter: blur(16px) saturate(180%);
-    -webkit-backdrop-filter: blur(16px) saturate(180%);
-    background-color: rgb(17 25 40 / 33%);
+    /* backdrop-filter: blur(16px) saturate(180%);
+    -webkit-backdrop-filter: blur(16px) saturate(180%); */
+    background-color: rgb(17 25 40 / 21%);
     border-radius: 12px;
     border: 1px solid rgba(255, 255, 255, 0.125);
     padding: 30px;
